samples/_failures_safe/1761538624_60f505_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee47f628.c: In function ‘main’:
./samples/SAFE/__tmp_ee47f628.c:151: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ee47f628.c:150:5: error: expected declaration or statement at end of input
  150 |     if
      |     ^~
